# NovaFEA

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  run_build_and_test.py  vcpkg.json
build_scripts/: BUILD_README.md  BUILD_README_cn.md  VCPKG_INSTALL_README.md  build.bat  build.sh  vcpkg_install.bat
case/: tet4_mat1.jsonc
case/c3d8r_rpolynomial/: AMP-1.txt  control.json
case/hex8_nodeforce_mat1_inp/: control.json
case/hex8r_mat1/: curve.txt
case/tie/: control.json
data_center/: AppSession.h  DataContext.h  DofMap.h  ElementRegistry.h  PartGraph.h  TopologyData.h  mesh.h
data_center/components/: analysis_component.h  load_components.h  material_components.h  mesh_components.h  property_components.h  simdroid_components.h
docs/: JAX + IREE：高性能结构求解器开发工作流.md  datacenter.md  declarative_parser_architecture.md  json_format_reference.md  json_migration_summary.md  simdroid_ex_material.md  交互模式使用手册.md  有限元理论.md  算法开发流.md
docs/demos/jax/: c3d8r.py  demo_unified.py
python_jax/: USAGE.md  __init__.py  builder.py  config.py  config_example_c3d8r.json  config_example_tet4.json  elements.py  inp_parser.py  main.py  materials.py  mesh_builder.py  run.py  simdroid_parser.py  visualization.py
python_jax/code_gen/: compiler_core.py  design.md  example_custom.py  explicit.py  manual.md  static.py  sympy_codegen.py  test_polystress.py  tet4_gen.py  tet4_isotropic_Ke_gen.py
python_jax/code_gen/ci_test/: __init__.py  build_script_generator.py  ci_workflow_generator.py  test_driver_template.py  wrappers.py
python_jax/code_gen/definitions/: abc.py
python_jax/code_gen/definitions/elements/: hex8.py  tet4.py
python_jax/code_gen/definitions/materials/: isotropic.py
python_jax/code_gen/hex8r_eas/: calc_B_bar.py  calc_mises_stress.py  calc_shape_function.py  calc_vol_bbar.py  f90_to_for_converter.py  form_B_matrix.py  get_dstrain.py  hex8r_eas_material_ops.py  hex8r_eas_ops.py  hourglass_shape_vectors.py  hughes_winget_rotation.py  invert_3by3.py  jacobian_center.py  jacobian_inverse.py  prompt.md  rpolynomialN3.py  stress_rotate.py
python_jax/code_gen/templates/: peachpy_kernel.py.j2
python_jax/cpp_dll/: iree_runtime.lib
python_jax/demo/: demo_pann.py  tet4_mat1_ex_jax.py
python_jax/function/: hex8.mlir  hex8_lumped_mass.py  hex8_solver.vmfb  sympy_codegen_tet4.py  tet4_jax.py  tet4_sympy_codegen.cpp
reference/: hex8r_generated_wrappers.f90  vuel_unified.for  vuel_unified_embedded.for
system/: CommandProcessor.cpp  CommandProcessor.h  main.cpp  main0_explicit.cpp  main0_explicit.h  main0_linearstatic.cpp  main0_linearstatic.h
system/analysis/: GraphAnalyzer.h  GraphBuilder.h  MermaidReporter.h
system/assemble/: AssemblySystem.cpp  AssemblySystem.h
system/curve/: CurveSystem.cpp  CurveSystem.h
system/dof/: DofNumberingSystem.cpp  DofNumberingSystem.h
system/element/c3d8r/: C3D8RStiffnessMatrix.cpp  C3D8RStiffnessMatrix.h
system/element/tet4/: Tet4StiffnessMatrix.cpp  Tet4StiffnessMatrix.h
system/explicit/: ExplicitSolver.cpp  ExplicitSolver.h
system/exporter_base/: exporterBase.cpp  exporterBase.h
system/exporter_json/: JsonExporter.cpp  JsonExporter.h
system/exporter_simdroid/: SimdroidExporter.cpp
system/force/: InternalForceSystem.cpp  InternalForceSystem.h
system/force/c3d8r/: C3D8RInternalForce.cpp  C3D8RInternalForce.h
system/force/tet4/: Tet4InternalForce.cpp  Tet4InternalForce.h  tet4_assembly.cpp  tet4_dN_dnat.cpp  tet4_mapping.cpp
system/load/: LoadSystem.cpp  LoadSystem.h
system/mass/: MassSystem.cpp  MassSystem.h
system/mass/c3d8/: C3D8Mass.cpp  C3D8Mass.h
system/mass/c3d8r/: C3D8RMass.cpp  C3D8RMass.h
system/mass/gauss/: GaussIntegration.cpp  GaussIntegration.h
system/mass/tet4/: Tet4Mass.h  tet4_lumped_mass.cpp
system/material/: dmatMain.cpp  dmatMain.h
system/material/mat1/: LinearElasticMatrixSystem.cpp  LinearElasticMatrixSystem.h  isotropic_D_gen.cpp
system/mesh/: TopologySystems.cpp  TopologySystems.h  element_exporter.cpp  element_exporter.h  element_parser.cpp  element_parser.h  node_exporter.cpp  node_exporter.h  node_parser.cpp  node_parser.h  set_exporter.cpp  set_exporter.h  set_parser.cpp  set_parser.h
system/output/: VtuExporter.cpp  VtuExporter.h
system/parser_base/: BlockHandler.h  GenericLineParser.h  parserBase.cpp  parserBase.h  string_utils.h
system/parser_json/: JsonParser.cpp  JsonParser.h
system/parser_simdroid/: SimdroidParser.cpp  SimdroidParser.h  SimdroidParserConstraint.cpp  SimdroidParserControl.cpp  SimdroidParserDetail.h  SimdroidParserMesh.cpp  SimdroidParserValidate.cpp
system/simdroid/: SimdroidInspector.h
system/tui/: AppTUI.cpp  AppTuiListRender.cpp  AppTuiPanels.cpp  AppTuiState.h  ComponentTUI.cpp  ComponentTUI.h  InspectorPanel.cpp  ListViews.cpp  TuiLogSink.cpp
test/: CMakeLists.txt  run_tests.bat  run_tests.sh  test_assembly_system.cpp  test_json_exporter.cpp
test_case/: test.py  test_benchamrk_report.txt  test_cases.json
test_case/benchmark/: test_cases.json
test_case/hex8_mat1_ex/: displacement.csv  hex8_mat1_ex.inp  hex8_mat1_ex.jsonc
test_case/hex8_mat1_im/: hex8_mat1_im.jsonc
test_case/tet4_mat1_ex/: displacement.csv  tet4_mat1_ex.inp  tet4_mat1_ex.jsonc
test_case/tet4_mat1_im/: tet4_mat1.bdf  tet4_mat1.f06
test_case/tet4_mat1_im/benchmark/: tet4_mat1_im.vtu
vcpkg-triplets/: vcpkg-mingw-clang-toolchain.cmake  x64-mingw-clang-dynamic.cmake
